[tool.poetry]
name = "slowapi"
version = "0.1.3"
description = "A rate limiting extension for Starlette and Fastapi"
authors = ["Laurent Savaete <laurent@where.tf>"]
license = "MIT"

readme = "README.md"

repository = "https://github.com/laurents/slowapi"
homepage = "https://github.com/laurents/slowapi"
documentation = "https://slowapi.readthedocs.io/en/latest/"

include = ["slowapi/py.typed"]

[tool.poetry.dependencies]
python = "^3.6"
limits = "^1.5"
redis = "^3.4.1"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
mypy = "^0.761"
black = "^19.10b0"
fastapi = "^0.61.0"
lxml = "^4.5.0"
starlette = "^0.13.6"
mock = "^4.0.1"
hiro = "^0.5.1"
requests = "^2.22.0"
pytest = "^5.3.5"
mkdocs = "^1.1.2"
mkautodoc = "^0.1.0"

[tool.black]
line-length = 88

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
