[tool.poetry]
name = "slowapi"
version = "0.1.9"
description = "A rate limiting extension for Starlette and Fastapi"
authors = ["Laurent Savaete <laurent@where.tf>"]
license = "MIT"

readme = "README.md"

repository = "https://github.com/laurents/slowapi"
homepage = "https://github.com/laurents/slowapi"
documentation = "https://slowapi.readthedocs.io/en/latest/"

include = ["slowapi/py.typed"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
limits = ">=2.3"
redis = {version = "^3.4.1", optional = true}

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
mypy = "^0.910"
black = "^23.0.0"
fastapi = "^0.89.0"
lxml = "^4.9.1"
starlette = "^0.22.0"
mock = "^4.0.1"
hiro = "^0.5.1"
requests = "^2.22.0"
pytest = "~=6.2.5"
mkdocs = "^1.2.3"
mkautodoc = "^0.1.0"
types-redis = "^3.5.6"
coverage = "^6.3"
flake8 = "^4.0.1"
setuptools = "^65.5.0"
httpx = "^0.23.3"

[tool.black]
line-length = 88

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
redis = ["redis"]
