[project]
name = "slowapi"
version = "0.2.0"
description = "A rate limiting extension for Starlette and FastAPI"
readme = "README.md"
authors = [
    { name = "Laurent Savaete", email = "laurent@where.tf"},
    { name = "Noelle Wang", email = "73260931+No767@users.noreply.github.com" }
]
requires-python = ">=3.10,<4"
dependencies = [
    "fastapi>=0.116.1,<1",
    "limits>=5.5.0,<6",
]

[project.optional-dependencies]
redis = [
    "redis[hiredis]>=6.3.0,<7",
]
valkey = [
    "valkey[libvalkey]>=6.1.0,<7",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7,<1",
    "pyright[nodejs]>=1.1.403,<2",
    "lefthook>=1.12.2,<2",
    {include-group = "docs"},
    {include-group = "test"}
]

docs = [
    "mkdocs>=1.6.1,<2",
    "mkdocstrings[python]>=0.30.0,<1"
]
test = [
    "pytest>=8.4.1,<9",
    "pytest-asyncio>=1.1.0,<2",
    "coverage>=7.10.2,<8",
    "httpx>=0.28.1,<1",
    "hiro>=1.1.1,<2"
]

[tool.pyright]
include = ["slowapi",  "tests"]
exclude = ["**/__pycache__", "docs",]
reportMissingImports = "error"
typeCheckingMode = "standard"
reportUnnecessaryTypeIgnoreComment = "warning"

[tool.ruff]
line-length = 88
extend-include = ["slowapi", "tests"]
extend-exclude = ["**/__pycache__", "docs"]

[tool.ruff.lint]
ignore = [
    "E501", 
    "N999", 
    "E402", 
    "S311", 
    "ASYNC109",
    "S101",
    
    # These are recommended by Ruff if the formatter is to be used: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002"
    ]
select = ["E", "F", "N", "ASYNC", "S", "ERA", "I"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"
